# golinks-mcp

./: Dockerfile  README.md  cspell.json  pyproject.toml
.github/workflows/: publish.yml
scripts/: get_oauth_token.py  test_mcp.py
src/golinks_mcp/: __main__.py  client.py  server.py
src/golinks_mcp/tools/: golinks.py  search.py
